# EvolveClaw

./: .gitignore  README.md  evolveclaw-ramsey-prompt.md  pyproject.toml  requirements.txt
configs/: demo.yaml  llm_demo.yaml
docs/plans/: 2026-03-14-code-review-improvements.md  2026-03-14-evolveclaw-ramsey.md
docs/superpowers/specs/: 2026-03-14-evolveclaw-ramsey-design.md
evolveclaw_ramsey/: __init__.py  __main__.py  cli.py
evolveclaw_ramsey/agent/: __init__.py  loop.py  population.py  proposer.py
evolveclaw_ramsey/harness/: __init__.py  checkpoint.py  evaluator.py  executor.py  recorder.py  stats.py  visualize.py
evolveclaw_ramsey/ramsey/: __init__.py  graph_repr.py  scoring.py  strategies.py
evolveclaw_ramsey/utils/: __init__.py  config.py  logging.py
research/: notes.md  sources.md
scripts/: run_demo.sh  run_search.sh
tests/: test_checkpoint.py  test_cli.py  test_config.py  test_evaluator.py  test_executor.py  test_graph_repr.py  test_logging.py  test_loop.py  test_population.py  test_proposer.py  test_recorder.py  test_scoring.py  test_stats.py  test_strategies.py  test_visualize.py
