[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["evolveclaw_ramsey*"]

[project]
name = "evolveclaw-ramsey"
version = "0.1.0"
description = "Minimal educational AlphaEvolve-style Ramsey optimization system"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
evolveclaw-ramsey = "evolveclaw_ramsey.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["runs", ".pytest_cache", "docs", "configs", "research"]
